USD export does not respect opacity threshold for clip alpha blend mode #107062

Closed
opened 2023-04-18 07:48:24 +02:00 by Matt McLin · 2 comments
Member

System Information
Operating system: macOS 13
Graphics card: M1 Max

Blender Version
Broken: 3.5.0
Worked: never

When setting the Blend Mode of a material to Alpha Clip, an additional Clip Threshold value can be specified, which allows one to create an alpha cut-out where the material is transparent wherever the input texture is less than the specified threshold. Then exporting a scene to USD, this clip threshold needs to be translated to USD Preview Surface's opacityThreshold attribute.

Blender is properly respecting the opacityThreshold on import, but not for export.

Exact steps for others to reproduce the error
Open attached opacity_threshold_export_example.blend, with the attached alpha_cutout.png in the same directory.
Notice two white images in front of a blue background. The left image uses an alpha cutout, the right image uses alpha blending.
File->Export->USD
File->New
File->Import->USD
Select the exported USD file.
Notice that the left image appears incorrect.

**System Information** Operating system: macOS 13 Graphics card: M1 Max **Blender Version** Broken: 3.5.0 Worked: never When setting the `Blend Mode` of a material to `Alpha Clip`, an additional `Clip Threshold` value can be specified, which allows one to create an alpha cut-out where the material is transparent wherever the input texture is less than the specified threshold. Then exporting a scene to USD, this clip threshold needs to be translated to `USD Preview Surface`'s `opacityThreshold` attribute. Blender is properly respecting the `opacityThreshold` on import, but not for export. **Exact steps for others to reproduce the error** Open attached opacity_threshold_export_example.blend, with the attached alpha_cutout.png in the same directory. Notice two white images in front of a blue background. The left image uses an alpha cutout, the right image uses alpha blending. File->Export->USD File->New File->Import->USD Select the exported USD file. Notice that the left image appears incorrect.
Michael B Johnson was assigned by Matt McLin 2023-04-18 07:48:25 +02:00
Author
Member

Not sure about proper way to link things, but this issue is addressed by this PR:
#107149

Not sure about proper way to link things, but this issue is addressed by this PR: https://projects.blender.org/blender/blender/pulls/107149
Member

PR is submitted already that addressees this issue so confirming.

PR is submitted already that addressees this issue so confirming.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-01 17:28:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107062
No description provided.